# Linux2023

./: README.md
HomeWork_1/: CMakeLists.txt  copy.cpp
HomeWork_2/: CMakeLists.txt  ping.cpp  pong.cpp
HomeWork_3/: CMakeLists.txt  pipe.c
HomeWork_4/: CMakeLists.txt  main.c
